--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "firebase": "^11.4.0",
+    "firebase-admin": "^13.2.0",
     "lucide-react": "^0.479.0",
     "next": "13.5.1",
+    "nodemailer": "^6.10.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -31,5 +33,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.17"
   }
 }
