--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "firebase-admin": "^13.2.0",
     "lucide-react": "^0.479.0",
     "next": "13.5.1",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
