--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
@@ -28,10 +30,10 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.479.0",
     "next": "13.5.1",
     "next-themes": "^0.4.6",
@@ -44,7 +46,8 @@
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/nodemailer": "^6.4.17"
