--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "eslint-config-next": "13.5.1",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.2.0",
